Navigation drawer added. Settings - user can choose drive mode.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="control_type">Control type</string>
     <string name="select_control_type">Select control type</string>
 
+    <string name="pref_drive_mode">pref_drive_mode</string>
+    <string name="drive_mode">Drive mode</string>
+    <string name="select_drive_mode">Select drive mode</string>
+
 </resources>
