--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,7 @@
     <string name="car_environment">Car environment</string>
     <string name="action_open_drawer">Open navigation drawer</string>
     <string name="action_close_drawer">Close navigation drawer</string>
+    <string name="show_car_environment">Show car environment</string>
+    <string name="hide_car_environment">Hide car environment</string>
 
 </resources>
